# cloud-storage

./: .gitignore  .npmrc  LICENSE  eslint.config.js  index.html  index.js  package-lock.json  package.json  vite.config.js
cxx/: CMakeLists.txt
cxx/include/: mylib.hpp
cxx/src/: mylib.cpp
electron/: index.js  preload.js
public/static/yueque-1.32.0/: doc.umd.js
src/: main.js
src/assets/: base.css  dark.css  main.css
src/components/: CorrugationButton.vue  GoogleInput.vue
src/router/: index.js
src/static-page/: Index.vue
src/static-page/auth/: login.vue
src/static-page/cloudDisk/: Index.vue
src/static-page/doc/: Index.vue
src/static-page/more/: Index.vue
src/static-page/user/: Index.vue
src/view/: index.vue
src/view/auth/: login.vue
src/view/auth/api/: loginApi.js  loginApiFetch.js  loginApiXhr.js
src/view/main/: home.vue  people.vue
test-api/: http.js  package-lock.json  package.json  运行指南.txt
test-api/apidoc/: 00.全局说明.txt  01.登录接口.txt  02.获取用户列表.txt  03.获取用户详情.txt  04.修改用户密码.txt  04.删除用户.txt
test-api/data/: user.json
test-api/lib/: data.js  date.js  file.js  response.js
